--- a/index.html
+++ b/index.html
@@ -28,24 +28,15 @@
       </div>
       <div class="pages" id="pagesContainer">
         <section class="page cover">
+          <img src="assets/images/background.png" class="cover-bg anim-fade" alt="Background" />
           <img src="assets/images/slide1/frame-top1.png" class="frame-top anim-fade" alt="Frame Top" />
-          <img src="assets/images/slide1/frame-bot1.png" class="frame-bottom anim-fade" alt="Frame Bottom" />
+          
+          <img src="assets/images/slide1/frame-left1.png" class="frame-side-left anim-fade" alt="Frame Left" />
+          <img src="assets/images/slide1/frame-right1.png" class="frame-side-right anim-fade" alt="Frame Right" />
+          <img src="assets/images/slide1/frame-bot1.png" class="frame-bottom-gunungan anim-fade" alt="Gunungan" />
 
-          <div class="split-container">
-            <div class="section-part p1-top anim-fade delay-1">
-              <img src="assets/images/slide1/Top1-1.png" class="ornament" alt="Top Ornament 1" />
-            </div>
-
-            <div class="section-part p1-mid anim-fade delay-2">
-              <img src="assets/images/slide1/Top2-1.png" class="ornament" alt="Top Ornament 2" />
-            </div>
-
-            <div class="section-part p1-bot anim-fade delay-3">
-              <div class="content-bottom">
-                <p>The beginning of our forever</p>
-                <button class="btn-open" onclick="openInvitation()">Open Invitation</button>
-              </div>
-            </div>
+          <div class="cover-content anim-fade delay-1">
+            <button class="btn-open" onclick="openInvitation()">Open Invitation</button>
           </div>
         </section>
 
