--- a/index.html
+++ b/index.html
@@ -64,15 +64,15 @@
         <div class="page-inner">
           <div class="split-container-3parts">
             <div id="p3Div1" class="section-part-3 p3-part-top" style="opacity: 0">
-              <img src="assets/images/slide3/content1:3-3.png" class="content-image" />
+              <img src="assets/images/slide3/content1-3-3.png" class="content-image" />
             </div>
 
             <div id="p3Div2" class="section-part-3 p3-part-middle" style="opacity: 0">
-              <img src="assets/images/slide3/content2:3-3.png" class="content-image" />
+              <img src="assets/images/slide3/content2-3-3.png" class="content-image" />
             </div>
 
             <div id="p3Div3" class="section-part-3 p3-part-bottom" style="opacity: 0">
-              <img src="assets/images/slide3/content3:3-3.png" class="content-image" />
+              <img src="assets/images/slide3/content3-3-3.png" class="content-image" />
             </div>
           </div>
 
@@ -92,15 +92,15 @@
         <div class="page-inner">
           <div class="split-container-3parts">
             <div id="p4Div1" class="section-part-3 p4-part-top" style="opacity: 0">
-              <img src="assets/images/slide4/content1:3-4.png" class="content-image" />
+              <img src="assets/images/slide4/content1-3-4.png" class="content-image" />
             </div>
 
             <div id="p4Div2" class="section-part-3 p4-part-middle" style="opacity: 0">
-              <img src="assets/images/slide4/content2:3-4.png" class="content-image" />
+              <img src="assets/images/slide4/content2-3-4.png" class="content-image" />
             </div>
 
             <div id="p4Div3" class="section-part-3 p4-part-bottom" style="opacity: 0">
-              <img src="assets/images/slide4/content3:3-4.png" class="content-image" />
+              <img src="assets/images/slide4/content3-3-4.png" class="content-image" />
             </div>
           </div>
 
