fix wa and lokasi

--- a/index.html
+++ b/index.html
@@ -133,10 +133,12 @@
           <div class="split-container-2parts">
             <div id="p5Div1" class="section-part-2 p5-part-top" style="opacity: 0">
               <img src="assets/images/slide5/content-top5.png" class="content-image" />
+              <a href="https://maps.app.goo.gl/ydDQPv7FVNwCKyVc7?g_st=ic" class="btn-location">LOKASI</a>
             </div>
 
             <div id="p5Div2" class="section-part-2 p5-part-bottom" style="opacity: 0">
               <img src="assets/images/slide5/content-bot5.png" class="content-image" />
+              <a href="https://maps.app.goo.gl/ydDQPv7FVNwCKyVc7?g_st=ic" class="btn-location">LOKASI</a>
             </div>
           </div>
 
@@ -251,9 +253,6 @@
           <div class="split-container-2parts">
             <div id="p9Div1" class="section-part-2 p9-part-top" style="opacity: 0">
               <img src="assets/images/slide9/top9.png" class="content-image" />
-            </div>
-
-            <div id="p9Div2" class="section-part-2 p9-part-bottom" style="opacity: 0">
               <div class="gift-container">
                 <div class="bank-card">
                   <p class="bank-name">Intan Nur Avivah / BCA</p>
@@ -270,6 +269,18 @@
                     <button class="btn-copy" onclick="copyToClipboard('0500850451')">Salin</button>
                   </div>
                 </div>
+              </div>
+            </div>
+
+            <div id="p9Div2" class="section-part-2 p9-part-bottom" style="opacity: 0">
+              <img src="assets/images/slide9/bot9.png" class="content-image" style="margin-bottom: 20px;" />
+              <div class="btn-group-rsvp">
+                <a href="https://wa.me/6281352372899?text=Halo,%20saya%20ingin%20konfirmasi%20bahwa%20saya%20akan%20Hadir%20di%20pernikahan%20Intan%20%26%20Imam" target="_blank" class="btn-rsvp">
+                  Konfirmasi Hadir
+                </a>
+                <a href="https://wa.me/6281352372899?text=Halo,%20mohon%20maaf%20saya%20Tidak%20Bisa%20Hadir%20di%20pernikahan%20Intan%20%26%20Imam" target="_blank" class="btn-rsvp" style="background-color: #555;">
+                  Maaf, Tidak Bisa Hadir
+                </a>
               </div>
             </div>
           </div>
