add new contents

--- a/index.html
+++ b/index.html
@@ -163,19 +163,19 @@
               <div id="countdown" class="countdown-container">
                 <div class="countdown-item">
                   <span id="days" class="countdown-number">00</span>
-                  <span class="countdown-label">Days</span>
+                  <span class="countdown-label">Hari</span>
                 </div>
                 <div class="countdown-item">
                   <span id="hours" class="countdown-number">00</span>
-                  <span class="countdown-label">Hours</span>
+                  <span class="countdown-label">Jam</span>
                 </div>
                 <div class="countdown-item">
                   <span id="minutes" class="countdown-number">00</span>
-                  <span class="countdown-label">Minutes</span>
+                  <span class="countdown-label">Menit</span>
                 </div>
                 <div class="countdown-item">
                   <span id="seconds" class="countdown-number">00</span>
-                  <span class="countdown-label">Seconds</span>
+                  <span class="countdown-label">Detik</span>
                 </div>
               </div>
             </div>
@@ -275,11 +275,13 @@
             <div id="p9Div2" class="section-part-2 p9-part-bottom" style="opacity: 0">
               <img src="assets/images/slide9/bot9.png" class="content-image" style="margin-bottom: 20px;" />
               <div class="btn-group-rsvp">
-                <a href="https://wa.me/6285733602339?text=Halo,%20saya%20ingin%20konfirmasi%20bahwa%20saya%20akan%20Hadir%20di%20pernikahan%20Intan%20%26%20Imam" target="_blank" class="btn-rsvp">
+                <a href="https://wa.me/6285733602339?text=Halo,%20saya%20ingin%20konfirmasi%20bahwa%20saya%20akan%20Hadir%20di%20pernikahan%20Intan%20%26%20Imam"
+                  target="_blank" class="btn-rsvp">
                   Konfirmasi Hadir
                 </a>
-                <a href="https://wa.me/6285733602339?text=Halo,%20mohon%20maaf%20saya%20Tidak%20Bisa%20Hadir%20di%20pernikahan%20Intan%20%26%20Imam" target="_blank" class="btn-rsvp" style="background-color: #555;">
-                  Maaf, Tidak Bisa Hadir
+                <a href="https://wa.me/6285733602339?text=Halo,%20mohon%20maaf%20saya%20Berhalangan%20Hadir%20di%20pernikahan%20Intan%20%26%20Imam"
+                  target="_blank" class="btn-rsvp">
+                  Maaf, Berhalangan Hadir
                 </a>
               </div>
             </div>
@@ -298,6 +300,8 @@
 
       <section class="page" id="page10">
         <img src="assets/images/background.png" class="page-bg-static" alt="Background" />
+        <img src="assets/images/slide10/frame-left10.png" class="page10-frame-left" alt="Left Frame" />
+        <img src="assets/images/slide10/frame-right10.png" class="page10-frame-right" alt="Right Frame" />
         <div class="page-inner">
           <div class="split-container-2parts">
             <div id="p10Div1" class="section-part-2 p10-part-top" style="opacity: 0">
@@ -391,7 +395,7 @@
         document.addEventListener("visibilitychange", () => {
           const bgMusic = document.getElementById("bgMusic");
           const musicBox = document.getElementById("musicBox");
-          
+
           if (document.hidden) {
             // If tab is hidden, pause music but keep 'isMusicPlaying' true if it WAS playing
             // so we know to resume it later.
